--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(images/1.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(1.jpg)"></div>
 
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
